--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,11 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -179,11 +181,25 @@ body {
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 50%
   );
+} */
+
+.hero .mask-container {
+  position: absolute;
+  /* background-color: red; */
+  inset: 0;
+  -webkit-mask-image: url(../img/header-bg.svg);
+  -webkit-mask: no-repeat;
+  -webkit-mask-size: cover;
+  -webkit-mask-position: center;
 }
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  /* max-width: 60rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 100px;
 }
 .hero .content h1 {
   font-size: 5em;
@@ -241,6 +257,10 @@ body {
   flex: 1 1 45rem;
 }
 .about .row .about-img img {
+  -webkit-mask-image: url("../img/Menu/basket-icon.svg");
+  -webkit-mask-size: 40%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
   width: 100%;
 }
 .about .row .content {
